@@ -1,3 +1,9 @@
+2016-10-10  Mark Ellis  <mark@mpellis.org.uk>
+
+	* consolidate udev device disconnect process into device manager,
+	  rather than the device object, since it is possible to receive
+	  a disconnect on a device that does not have a full device object
+
 2016-10-07  Mark Ellis  <mark@mpellis.org.uk>
 
 	* improve initialisation and error handling when passing a
